2002-12-20	fabian
    * Fixed the session status display problem
    
2002-12-20	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed all compiler warnings.
    
    * Fixed annoying glitch that would sometimes resize 
      window when the config session window was closed 
      even though the window sizes were not changed.
      
    * Fixed a window sizing problem that was evident in vi.
      I wish NSTabView would offer to calculate its frame 
      based on content size just like NSScrollView.
    

2002-12-19	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Re-implemented UI from button based to real-tab based 
      using NSTabView based on user feedback. Major code 
      changes and simplifications.
      
    * Fixed bug causing a crash when a session was closed 
      without the shell exiting with the "autoclose" 
      preference off.
      
    * Disabled the limit on the window size. Not sure why
      that was there.
      

2002-12-19	fabian
    * Changed version number to 0.6.0
    * Fixed a bug in zh_TW nib file
    * Alt/Option key now can be used as Meta or to add ESC
    * Fixed the "not saving auto-close option" bug
    * Fixed enter key on numeric keyboard problem
    * Fixed a problem that causes transparency settings lost
    * Fixed a lot of bugs related to VT100 emulation.
    
2002-12-18	fabian
    * change the shortcut key to close terminal to command-w
      and close window to shift-command-w, a la mozilla
      
2002-12-18	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Page up/down scrolling keys now need Shift key down 
      a la xterm since some programs like vi need to 
      interpret page up/down keys on their own.
      

2002-12-17	fabian
    * Added an AutoClose option in preference
    * Re-arranged preference panel
    * Re-arranged the toolbar items
    * Got rid of the quick-run panel
    * Del key now sends the correct escape sequence instead of 
      0x7f